[tool.poetry]
name = "aizynthtrain"
version = "0.1.0"
description = "Tools to train reaction predictions models for AiZynthFinder"
authors = ["Genheden, Samuel <samuel.genheden@astrazeneca.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
torch = "~1.13.1"
jupytext = "^1.14.0"
papermill = "^2.3.4"
scipy = "^1.8.1"
mendeleev = "^0.10.0"
scikit-learn = "~1.2.2"
nbconvert = "^7.2.3"
pydantic = "^1.10.2"
aizynthfinder = {url = "https://github.com/MolecularAI/aizynthfinder/archive/refs/tags/v3.4.0.tar.gz"}
reaction-utils = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-black = "^0.3.12"
pytest-cov = "^2.11.0"
pytest-datadir = "^1.3.1"
pytest-mock = "^3.5.0"
pytest-mccabe = "^2.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
